--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "klausbelegu-portfolio",
   "version": "1.0.0",
   "description": "Klaus Belegu's Azure Portfolio",
+  "main": "server.js",
   "scripts": {
-    "start": "npx serve -s ."
+    "start": "node server.js"
   },
   "dependencies": {
-    "serve": "^14.0.0"
+    "express": "^4.18.2"
   }
 }
